- moving Matrix package from Depends to Imports

2013-10-01:
- Updating convergence checking in clm.fit and simple_clm to the clm
  standard
- Removing distinction between (non-S3/4) sclm, eclm and clm model
  classes

2013-10-31:
- Now having 'methods' in depends since this is needed to run
  clmm. This was most likely only a problem when using Rscript where
  the methods package is not loaded by default.

2014-11-12:
- Reimplementation of formula, model.frame and design matrix
  processing motivated by a bug in model.matrix.clm and predict.clm
  reported by Russell Lenth 2014-11-07 when implementing lsmeans support
  for clm::ordinal.

2014-11-14:
- Fixing bug in convergence checking (conv.check) and added test to
  /tests/test.clm.convergence.R
- Improved the efficiency (i.e. speed) in the evaluation of standard
  errors for predictions using predict.clm (based on feature request
  by Thomas Jagger).

2015-01-21:
- Updating Citation information per CRAN request.

2015-06-28:
- Updating maintainer email address

2016-12-12:
- Fixing a couple of errors in CLM tutorial vignette
- Correcting description of threshold argument to clmm
- qgumbel did not respect it's lower.tail argument (thanks to John Fox for 
  reporting)
- Test for no. random effects less than the no. observations now gives a warning
  instead of an error and is now manageable via clmm.control.
  
2018-04-19:
- Fixed insufficient protect in get_fitted
- Registration of native routines (C-code)
- Reduce exec time for clmm examples
- change rBind -> rbind

2018-08-25:
- Added sign.location and sign.nominal to clm.control()
- Implemented type I, II and III type ANODE tables for clm fits
- Implemented flexible link functions for clm()s
- Added new article submitted to JSS as vignette and moved old vignettes to 
  GitHub

2019-03-09:
- Massage tests to check out on R-devel

2019-04-25:
- Change in formula evaluation in base R prompts this update - very kindly 
  fixed by Martin Maechler (R core) in PR#18 