@@ -787,7 +787,7 @@ summary.clm2 <- function(object, digits = max(3, .Options$digits - 3),
                    c("Estimate", "Std. Error", "z value", "Pr(>|z|)")))
   coef[, 1] <- object$coefficients
   vc <- try(vcov(object), silent = TRUE)
-  if(class(vc) == "try-error") {
+  if(inherits(vc, "try-error")) {
     warning("Variance-covariance matrix of the parameters is not defined")
     coef[, 2:4] <- NaN
     if(correlation) warning("Correlation matrix is unavailable")
