@@ -703,7 +703,7 @@ summary.clmm2 <- function(object, digits = max(3, .Options$digits - 3),
       stop("Model needs to be fitted with Hess = TRUE")
     }
     vc <- try(vcov(object), silent = TRUE)
-    if(class(vc) == "try-error") {
+    if(inherits(vc, "try-error")) {
         warning("Variance-covariance matrix of the parameters is not defined")
         coef[, 2:4] <- NaN
         if(correlation) warning("Correlation matrix is unavailable")
